apply plugin: 'com.android.library'

android {
    compileSdkVersion 31
	buildToolsVersion '31.0.0'
    defaultConfig {
        minSdkVersion 16
        targetSdkVersion 31
        versionCode 228
        versionName "2.2.8"
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    lintOptions {
        abortOnError false
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

repositories {
    mavenCentral()
    google()
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'androidx.appcompat:appcompat:1.4.0-rc01'
    implementation 'androidx.recyclerview:recyclerview:1.2.1'
}